Styling in process

--- a/templates/list.html
+++ b/templates/list.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
+    <script src="https://kit.fontawesome.com/d62d9d9e29.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8"/>
 	<title>FastFox inc.</title>
-	<meta content="width=device-width, initial-scale=1" name="viewport"/><meta content="Webflow" name="generator"/>
 </head>
 <body class="body">
 <div data-wf-quick-add-section="nav" class="section-2 wf-section">
@@ -12,12 +13,8 @@
 		<div class="container-light-nav w-container">
 		<a href="/list" class="navbar-light-brand w-nav-brand"><div class="company-name-block">Fast Fox Inc.</div></a>
 		<nav role="navigation" class="nav-menu w-nav-menu">
-			<form action="/search" class="search w-form" method="GET">
-				<input name="search_phrase" type="search" class="search-input w-input" maxlength="256" name="query" placeholder="Search…" id="search" required=""/>
-				<input type="submit" value="Search" class="search-button w-button"/>
-			</form>
 			<a href="{{ url_for('ask_question') }}" title="Don't panic! We are supportive and fast like a fox!" class="navbar-light-bold-link w-nav-link">Ask a question!</a>
-			<a href="#" class="navbar-light-bold-link w-nav-link">Work</a>
+			<a href="#" class="navbar-light-bold-link w-nav-link">Show 5 latest/See all</a>
 			<a href="#" class="navbar-light-bold-link w-nav-link">Blog</a>
 			<a href="#" class="navbar-light-navbutton w-button">Contact</a>
 		</nav>
@@ -29,8 +26,28 @@
 	</div>
 </div>
 <div data-wf-quick-add-section="body" class="section wf-section">
-	<div id="left_div">Some basic shit can be shown here.</div>
-	{# Here goes the main part!!#}
+	<div id="left_div">
+	    <form action="/search" class="search_panel" method="GET">
+            <input name="search_phrase" type="search" class="search_input" maxlength="256" name="query" placeholder="Search…" id="search" required=""/>
+            <div class="search_options">
+                <h3>Search in:</h3>
+                <div>
+                  <input type="checkbox" name="search_in" value="question" checked>
+                      <label for="scales">Questions</label>
+                </div>
+
+                <div>
+                  <input type="checkbox" name="search_in" value="answer">
+                  <label for="horns">Answers</label>
+                </div>
+                <div>
+                  <input type="checkbox" name="search_in" value="tag">
+                  <label for="horns">Tags</label>
+                </div>
+                <input type="submit" value="Search" class="search_button"/>
+            </div>
+        </form>
+    </div>
 <div id="middle_div">
 <table>
     <thead>
@@ -53,15 +70,15 @@
                     <td><a href="{{ url_for('display_question', id=question['id']) }}" title="Open this question">{{ value }}</a></td>
                 {% elif key == 'image' %}
                     <td>
-                        <img src="{{ url_for('static', filename='no-image-icon-0.jpg') }}" alt="uwu" width="100">
+                        <img src="{{ url_for('static', filename=value if value else 'no-image-icon-0.jpg') }}" alt="uwu" width="100">
                     </td>
                 {% else %}
                     <td>{{ value }}</td>
                 {% endif %}
             {% endfor %}
             <td>
-                <a href="{{ url_for('vote_question', question_id=question['id'], vote_type=+1) }}" title="Vote this question up!">👍</a>
-                <a href="{{ url_for('vote_question', question_id=question['id'], vote_type=-1) }}"title="Vote this question down!">👎</a>
+                <a href="{{ url_for('vote_question', question_id=question['id'], vote_type=+1) }}" title="Vote this question up!"><i class="fa-solid fa-circle-chevron-up"></i></a>
+                <a href="{{ url_for('vote_question', question_id=question['id'], vote_type=-1) }}"title="Vote this question down!"><i class="fa-solid fa-circle-chevron-down"></i></a>
             </td>
         </tr>
     {% endfor %}
@@ -89,7 +106,20 @@
     </thead>
 </table>
 </div>
-	<div id="right_div">Tags & infos go here...</div>
+	<div id="right_div">
+         <div class="grid-container">
+              <div class="grid-item">1</div>
+              <div class="grid-item">2</div>
+              <div class="grid-item">3</div>
+              <div class="grid-item">4</div>
+              <div class="grid-item">5</div>
+              <div class="grid-item">6</div>
+              <div class="grid-item">7</div>
+              <div class="grid-item">8</div>
+              <div class="grid-item">9</div>
+         </div>
+
+    </div>
 </div>
 <div class="wf-section">
 <div class="footer-with-links-wrap">
@@ -106,3 +136,6 @@
 	</div>
 </div>
 </div>
+</body>
+
+</html>
