--- a/templates/question.html
+++ b/templates/question.html
@@ -38,7 +38,7 @@
 	<div id="left_div">
         <div class="question_tags">
             {% for tag in tags %}
-                <div class="tag">{{ tag['name'] }}<a href="{{ url_for('remove_tag', question_id=question_id, tag_id=tag['id']) }}" title="Delete tag"><i class="fa-solid fa-delete-left"></i></a></div>
+                <div class="tag">{{ tag['name'] }}<a href="{{ url_for('remove_tag', question_id=question_id, tag_id=tag['id']) }}" title="Delete tag" onclick="return confirm('Are you sure want to delete this?')"><i class="fa-solid fa-delete-left"></i></a></div>
             {% endfor %}
 {#            <a href="{{ url_for('add_tag', question_id=question_id) }}" class="add_tag"><i class="fa-solid fa-square-plus"></i></a>#}
             <form class="tag tag_input" action="/question/{{ question_id }}/new_tag" method="POST" enctype=multipart/form-data>
@@ -64,8 +64,8 @@
             <p class="question-message">{{ result['message'] }}</p>
         </div>
         <div class="question_icons">
-            <a href="{{ url_for('edit_question', question_id=question_id) }}" title="Edit question"><i class="fa-solid fa-pen-to-square"></i></a>
-            <a href="{{ url_for('delete_question', question_id=question_id) }}" title="Delete question"><i class="fa-solid fa-trash-can"></i></a>
+            <a href="{{ url_for('edit_question', question_id=question_id) }}" onclick="return confirm('Are you sure want to edit this?')" title="Edit question"><i class="fa-solid fa-pen-to-square"></i></a>
+            <a href="{{ url_for('delete_question', question_id=question_id) }}" onclick="return confirm('Are you sure want to delete this?')" title="Delete question"><i class="fa-solid fa-trash-can"></i></a>
             <a href="{{ url_for('vote_question', question_id=question_id, vote_type=+1) }}" title="Vote this question up!"><i class="fa-solid fa-circle-chevron-up"></i></a>
             <a href="{{ url_for('vote_question', question_id=question_id, vote_type=-1) }}" title="Vote this question down!"><i class="fa-solid fa-circle-chevron-down"></i></a>
         </div>
@@ -87,7 +87,7 @@
                 <div class="answer_content">
                     <h4 class="answer-user">xy said:</h4>
                     {{ answer["message"] }} <a href="{{ url_for('edit_answer', answer_id=answer['id']) }}" title="Edit answer"><i class="fa-solid fa-pen-to-square"></i></a>
-                    <a href="{{ url_for('delete_answer', answer_id=answer['id'], question_id=question_id) }}" title="Delete answer"><i class="fa-solid fa-trash-can"></i></a>
+                    <a href="{{ url_for('delete_answer', answer_id=answer['id'], question_id=question_id) }}" title="Delete answer" onclick="return confirm('Are you sure want to delete this?')"><i class="fa-solid fa-trash-can"></i></a>
                 </div>
             </div>
                 {% for comment in answer['comments'] %}
@@ -104,8 +104,8 @@
                         </div>
                         <div class="comment_menu">
 
-                            <a href="{{ url_for('edit_comment', comment_id=comment['id']) }}" title="Edit comment"><i class="fa-solid fa-pen-to-square"></i></a>
-                            <a href="{{ url_for('delete_question_comment', question_id=question_id, comment_id = comment["id"]) }}" title="Delete comment"><i class="fa-solid fa-trash-can"></i></a>
+                            <a href="{{ url_for('edit_comment', comment_id=comment['id']) }}" onclick="return confirm('Are you sure want to edit this?')"title="Edit comment"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="{{ url_for('delete_question_comment', question_id=question_id, comment_id = comment["id"]) }}" onclick="return confirm('Are you sure want to delete this?')"title="Delete comment"><i class="fa-solid fa-trash-can"></i></a>
 
                         </div>
                     </ul>
@@ -127,7 +127,7 @@
         {% for comment in comments %}
             <li class="comment">{{ comment["message"] }}
                 <time datetime="YYYY-MM-DDThh:mm">{{ comment["submission_time"] }}</time>
-                <a href="{{ url_for('delete_question_comment', question_id=question_id, comment_id = comment["id"]) }}">
+                <a href="{{ url_for('delete_question_comment', question_id=question_id, comment_id = comment["id"]) }}" onclick="return confirm('Are you sure want to delete this?')">
                     <i class="fa-solid fa-trash-can"></i></a>
                 {# TODO create comment editor route               #}
                 <a href=""><i class="fa-solid fa-pen-to-square"></i></a>
