--- a/templates/comment_answer.html
+++ b/templates/comment_answer.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Comment answer</title>
-</head>
-<body>
-    <form action="/answer/{{ answer_id }}/new-comment" method="POST">
+{% extends 'base.html' %}
+{% block title %} Add Comment - FastFox {% endblock %}
+{% block left_div %}
+{% endblock %}
+{% block content %}
+        <form action="/answer/{{ answer_id }}/new-comment" method="POST">
     <p>
       <label for="message">Comment:</label><br>
         <textarea name="message" type="text" required></textarea>
@@ -14,5 +12,6 @@
         <button type="submit">Send comment</button>
     </p>
 </form>
-</body>
-</html>
+{% endblock %}
+{% block right_div %}
+{% endblock %}
