--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>FastFox</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %} Add Answer - FastFox {% endblock %}
+{% block left_div %}
+{% endblock %}
+{% block content %}
 <h1>Post an Answer</h1>
 <form action="/question/{{ question_id }}/new-answer" method="POST" enctype=multipart/form-data>
     <p>
@@ -17,5 +15,6 @@
         <button type="submit">Post an Answer</button>
     </p>
 </form>
-</body>
-</html>
+{% endblock %}
+{% block right_div %}
+{% endblock %}
