--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d62d9d9e29.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8"/>
-{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/design.css') }}">#}
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">#}
 	<title>{% block title %} {% endblock %}</title>
 </head>
 <body class="body">
