--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d62d9d9e29.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8"/>
-{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">#}
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/minimal.css') }}">#}
 	<title>{% block title %} {% endblock %}</title>
 </head>
 <body class="body">
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{url_for('list_questions')}}">FastFoxes</a>
+    <a class="navbar-brand" href="{{url_for('list_questions')}}"><i class="fa-brands fa-firefox-browser"></i>FastFoxes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,8 +25,16 @@
           <a class="nav-link" href="{{url_for('ask_question')}}">Recent questions</a>
     </div>
       <div class="navbar-nav ml-auto">
-        <a class="nav-link" href="#">{% if logged_in %} Profile {% else %} Login {% endif %}</a>
-        <a class="nav-link" href="#">{% if logged_in %} Logout {% else %} Sign up now to this wonderful site created by beautiful people {% endif %}</a>
+        {% if session['id'] %}
+            <a class="nav-link" href="#">Profile</a>
+        {% else %}
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        {% endif %}
+        {% if session['id'] %}
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+            <a class="nav-link" href="{{ url_for('register') }}">Sign up now to this wonderful site created by beautiful people</a>
+        {% endif %}
         <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
@@ -45,6 +53,15 @@
     </div>
 
     <div id="middle_div" class="col-md-8">
+        {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+              <p class="alert-info alert alert-primary">{{ message }}</p>
+            {% endfor %}
+            </ul>
+          {% endif %}
+        {% endwith %}
         {% block content %}
         {% endblock %}
     </div>
@@ -99,13 +116,11 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-globe"></i> Company name
-          </h6>
+          <h5 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-globe"></i> <i class="fa-brands fa-firefox-browser"></i> Fast Foxes Inc.
+          </h5>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
-
+            We believe every question deserves the best answers. Also save the foxes. They tend to be unpredictably fast.
           </p>
         </div>
         <!-- Grid column -->
