--- a/templates/list.html
+++ b/templates/list.html
@@ -46,6 +46,8 @@
                         <td>
                             <img src="{{ url_for('static', filename=value if value else 'no-image-icon-0.jpg') }}" alt="uwu" width="100">
                         </td>
+                    {% elif key == 'submission_time' %}
+                        <td>{{ value.strftime('%Y-%m-%d') }}</td>
                     {% else %}
                         <td>{{ value }}</td>
                     {% endif %}
