--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d62d9d9e29.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8"/>
-{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/minimal.css') }}">#}
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/minimal.css') }}">
 	<title>{% block title %} {% endblock %}</title>
 </head>
 <body class="body">
@@ -26,7 +26,7 @@
     </div>
       <div class="navbar-nav ml-auto">
         {% if session['id'] %}
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
         {% else %}
             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
         {% endif %}
@@ -53,7 +53,16 @@
     </div>
 
     <div id="middle_div" class="col-md-8">
-        {% with messages = get_flashed_messages() %}
+        {% with errors = get_flashed_messages(category_filter=["error"]) %}
+            {% if errors %}
+            <div class="alert-danger alert">
+              <a class="close" href="#">×</a>
+              {%- for msg in errors %} {{ msg }}{% endfor -%}
+            </div>
+            {% endif %}
+        {% endwith %}
+
+        {% with messages = get_flashed_messages(category_filter=["message"]) %}
           {% if messages %}
             <ul class=flashes>
             {% for message in messages %}
